--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                   </g>
                 </g>
               </svg>
-              Mods
+              Descargar
             </span>
           </button>
           <button>
